@@ -62,6 +62,7 @@ class PageArchive {
 	 * @return ResultWrapper
 	 */
 	public static function listPagesByPrefix( $prefix ) {
+		global $wgUser;
 		$dbr = wfGetDB( DB_SLAVE );
 
 		$title = Title::newFromText( $prefix );
@@ -77,6 +78,13 @@ class PageArchive {
 			'ar_namespace' => $ns,
 			'ar_title' . $dbr->buildLike( $prefix, $dbr->anyString() ),
 		);
+
+		// bug 19725
+		$suppressedText = REVISION::DELETED_TEXT | REVISION::DELETED_RESTRICTED;
+		if( !$wgUser->isAllowed( 'suppressrevision' ) ) {
+                        $conds[] = $dbr->bitAnd('ar_deleted', $suppressedText ) .
+                                ' != ' . $suppressedText;
+                }
 		return self::listPages( $dbr, $conds );
 	}
 
